# concrete_ev_sdk

./: .gitignore  MANIFEST.txt  README.md  README_DEPLOY.md  install_on_new_box.sh
client/: pc_video_http_infer.py
docs/: DOCKER_SDK_IMAGE.md  QA200A2-B_Concrete_EVSDK_详细接口说明_v1.1.md  VAS_DOCKER_DELIVERY.md  接口与HTTP调用说明.md
docs/reference/: concrete_image_structure.txt  playphonehr_reference_structure.txt
project/: CMakeLists.txt  concrete_api_server.py  scripts_build_no_evdeploy.sh  test_ji_calc_image.py  test_ji_video.py
project/3rd/wkt_parser/: CMakeLists.txt
project/3rd/wkt_parser/include/: wkt_parser.h
project/3rd/wkt_parser/src/: test-wkt-parser.cpp  wkt_parser.cpp
project/cmake/: evdeploy.cmake  opencv.cmake
project/docker/sdk_image/: Dockerfile  algo_config.json
project/include/: ji_utils.h
project/model/concrete/: labels.txt
project/src/: alert_recoder.cpp  alert_recoder.h  configuration.hpp  ji.cpp  sample_algorithm.cpp  sample_algorithm.h  sample_detector.cpp  sample_detector.h
